--- a/_includes/classic-sidebar.html
+++ b/_includes/classic-sidebar.html
@@ -1,18 +1,13 @@
 <div class="sidebar classic-sidebar">
    
     <div class="widget">
-        <h3 class="title">Categories</h3>
+        <h3 class="title">Categorias</h3>
         {% include category_list.html %}
     </div>
    
     <div class="widget">
-        <h3 class="title">Tags</h3>
+        <h3 class="title">Etiquetas</h3>
         {% include tag_list.html %}
     </div>
-
-    <div class="widget">
-        <h3 class="title">Authors</h3>
-        {% include author_list.html %}
-    </div>    
 
 </div>
