--- a/_includes/full.html
+++ b/_includes/full.html
@@ -10,29 +10,33 @@
     <text style="word-spacing:0px;letter-spacing:0px" font-family="sans-serif" xml:space="preserve" transform="scale(.92210 1.0845)" font-size="12.185px" y="675.19672" x="1712.0358" stroke-width="1.2185px" line-height="125%" fill="#000000"><tspan y="675.19672" x="1712.0358"><tspan font-family="&apos;Al Nile&apos;" font-size="85.292px" stroke="#0092a5" y="675.19672" x="1712.0358" stroke-width="1.2185px">Galería con </tspan></tspan><tspan y="781.8114" x="1712.0358"><tspan font-family="&apos;Al Nile&apos;" font-size="85.292px" stroke="#0092a5" y="781.8114" x="1712.0358" stroke-width="1.2185px">mis cuadros</tspan></tspan></text>
   </g>
 </svg>
-<svg version="1.1" viewBox="0 0 214.99999 112" class="ts-icon">
-  <g id="layer2" transform="translate(-1061.9 -804.38)" stroke="#0092a5">
-    <g id="g4893" transform="matrix(21.26 0 0 22.34 -21508 -19421)">
-      <g id="g4731" transform="matrix(.45650 0 0 .41362 577.7 534.39)" fill="none">
-        <path id="path4318" d="m1067.2 901.67c0.4729-2.7531 2.326-3.2481 3.9315-3.8776 3.0412 0.20995 1.907 2.7558 1.5618 3.2852-0.8796 1.3494-1.7593 1.1848-2.6389 1.7772" stroke="#0092a5" stroke-width="1px"/>
-        <path id="path4320" d="m1070.8 898.6-1.502 6.5853c-2.3103 0.0487-4.071 0.6145-5.9542 2.496l20.759-1.7525" stroke="#0b92a5" stroke-width=".99105px"/>
-        <path id="path4322" d="m1075.8 898.23-3.9853 7.7552c-1.5426-0.0328-1.449-1.0002-0.8617-1.885 4.484-1.0192 7.5578 0.34108 10.825 0.53855" stroke="#0092a5" stroke-width="1px"/>
-        <path id="path4324" d="m1080.5 900.33c0.1848-1.7189-0.7888-1.6174-1.5618-1.8311-2.3236 2.7488-2.8424 7.0768-4.1469 10.717" stroke="#0092a5" stroke-width="1px"/>
+<svg version="1.1" viewBox="0 0 250 230" class="ts-icon">
+  <g id="layer2" stroke="#0092a5" transform="translate(-1061.9,-679.38)">
+    <g id="g4893" transform="matrix(24.286 0 0 26.36 -24740 -23183)">
+      <g id="g4731" fill="none" transform="matrix(.4565 0 0 .41362 577.7 534.39)">
+        <path id="path4318" stroke-width="1px" stroke="#0092a5" d="m1067.2 901.67c0.4729-2.7531 2.326-3.2481 3.9315-3.8776 3.0412 0.20995 1.907 2.7558 1.5618 3.2852-0.8796 1.3494-1.7593 1.1848-2.6389 1.7772"/>
+        <path id="path4320" stroke-width=".99105px" stroke="#0b92a5" d="m1070.8 898.6-1.502 6.5853c-2.3103 0.0487-4.071 0.6145-5.9542 2.496l20.759-1.7525"/>
+        <path id="path4322" stroke-width="1px" stroke="#0092a5" d="m1075.8 898.23-3.9853 7.7552c-1.5426-0.0328-1.449-1.0002-0.8617-1.885 4.484-1.0192 7.5578 0.34108 10.825 0.53855"/>
+        <path id="path4324" stroke-width="1px" stroke="#0092a5" d="m1080.5 900.33c0.1848-1.7189-0.7888-1.6174-1.5618-1.8311-2.3236 2.7488-2.8424 7.0768-4.1469 10.717"/>
       </g>
     </g>
-    <text id="text4348" style="word-spacing:0px;letter-spacing:0px" font-family="sans-serif" xml:space="preserve" transform="scale(.92210 1.0845)" font-size="12.185px" y="675.19672" x="1712.0358" stroke-width="1.2185px" line-height="125%" fill="#000000"><tspan id="tspan4350" y="675.19672" x="1712.0358"><tspan id="tspan4352" font-family="&apos;Al Nile&apos;" font-size="85.292px" stroke="#0092a5" y="675.19672" x="1712.0358" stroke-width="1.2185px">Galería con </tspan></tspan><tspan id="tspan4354" y="781.8114" x="1712.0358"><tspan id="tspan4356" font-family="&apos;Al Nile&apos;" font-size="85.292px" stroke="#0092a5" y="781.8114" x="1712.0358" stroke-width="1.2185px">mis cuadros</tspan></tspan></text>
+    <g font-family="sans-serif" fill="#000000">
+      <text id="text4348" style="word-spacing:0px;letter-spacing:0px" line-height="125%" xml:space="preserve" font-size="12.185px" transform="scale(.9221 1.0845)" y="675.19672" x="1712.0358" stroke-width="1.2185px"><tspan id="tspan4350" y="675.19672" x="1712.0358"><tspan id="tspan4352" font-size="85.292px" font-family="&apos;Al Nile&apos;" stroke="#0092a5" y="675.19672" x="1712.0358" stroke-width="1.2185px"><tspan id="tspan4154" font-size="30px">Galería con</tspan></tspan></tspan><tspan id="tspan4354" y="781.8114" x="1712.0358"><tspan id="tspan4356" font-size="85.292px" font-family="&apos;Al Nile&apos;" stroke="#0092a5" y="781.8114" x="1712.0358" stroke-width="1.2185px"> mis cuadros</tspan></tspan></text>
+      <flowRoot id="flowRoot4146" style="word-spacing:0px;letter-spacing:0px" xml:space="preserve" transform="translate(1061.9,659.38)" line-height="125%" font-size="10px"><flowRegion id="flowRegion4148"><rect id="rect4150" y="59.917" width="478.65" x="494.49" height="138.43"/></flowRegion><flowPara id="flowPara4152"/></flowRoot>
+      <text id="text4320" style="word-spacing:0px;letter-spacing:0px" xml:space="preserve" font-size="40px" y="864.28577" x="1065.3088" line-height="125%"><tspan id="tspan4322" y="864.28577" x="1065.3088"><tspan id="tspan4324" y="864.28577" x="1065.3088" font-size="40px">Galería con  </tspan></tspan><tspan id="tspan4326" y="901.78577" x="1065.3088"><tspan id="tspan4328" y="901.78577" x="1065.3088" font-size="40px">mis cuadros</tspan></tspan></text>
+    </g>
   </g>
 </svg>
-<svg version="1.1" viewBox="0 0 600 300" class="ts-no-slogan">
-  <g id="layer2" transform="translate(-1061.9 -609.38)" stroke="#0092a5">
-    <g id="g4893" transform="matrix(21.26 0 0 22.34 -21521 -19371)">
-      <g id="g4731" transform="matrix(.62534 0 0 .57177 398.39 384.22)" fill="none">
-        <path id="path4318" d="m1067.2 901.67c0.4729-2.7531 2.326-3.2481 3.9315-3.8776 3.0412 0.20995 1.907 2.7558 1.5618 3.2852-0.8796 1.3494-1.7593 1.1848-2.6389 1.7772" stroke="#0092a5" stroke-width="1px"/>
-        <path id="path4320" d="m1070.8 898.6-1.502 6.5853c-2.3103 0.0487-4.071 0.6145-5.9542 2.496l20.759-1.7525" stroke="#0b92a5" stroke-width=".99105px"/>
-        <path id="path4322" d="m1075.8 898.23-3.9853 7.7552c-1.5426-0.0328-1.449-1.0002-0.8617-1.885 4.484-1.0192 7.5578 0.34108 10.825 0.53855" stroke="#0092a5" stroke-width="1px"/>
-        <path id="path4324" d="m1080.5 900.33c0.1848-1.7189-0.7888-1.6174-1.5618-1.8311-2.3236 2.7488-2.8424 7.0768-4.1469 10.717" stroke="#0092a5" stroke-width="1px"/>
+<svg version="1.1" viewBox="0 0 700 300" class="ts-no-slogan">
+  <g id="layer2" stroke="#0092a5" transform="matrix(1.0105 0 0 1.4015 -1080.2 -887.81)">
+    <g id="g4893" transform="matrix(23.139 0 0 24.918 -23517 -21702)">
+      <g id="g4731" fill="none" transform="matrix(.62534 0 0 .57177 398.39 384.22)">
+        <path id="path4318" stroke-width="1px" stroke="#0092a5" d="m1067.2 901.67c0.4729-2.7531 2.326-3.2481 3.9315-3.8776 3.0412 0.20995 1.907 2.7558 1.5618 3.2852-0.8796 1.3494-1.7593 1.1848-2.6389 1.7772"/>
+        <path id="path4320" stroke-width=".99105px" stroke="#0b92a5" d="m1070.8 898.6-1.502 6.5853c-2.3103 0.0487-4.071 0.6145-5.9542 2.496l20.759-1.7525"/>
+        <path id="path4322" stroke-width="1px" stroke="#0092a5" d="m1075.8 898.23-3.9853 7.7552c-1.5426-0.0328-1.449-1.0002-0.8617-1.885 4.484-1.0192 7.5578 0.34108 10.825 0.53855"/>
+        <path id="path4324" stroke-width="1px" stroke="#0092a5" d="m1080.5 900.33c0.1848-1.7189-0.7888-1.6174-1.5618-1.8311-2.3236 2.7488-2.8424 7.0768-4.1469 10.717"/>
       </g>
     </g>
-    <text id="text4348" style="word-spacing:0px;letter-spacing:0px" font-family="sans-serif" xml:space="preserve" transform="scale(.96402 1.0373)" font-size="46.455px" y="684.92743" x="1424.4934" stroke-width="1.1321px" line-height="125%" fill="#000000"><tspan id="tspan4350" y="684.92743" x="1424.4934"><tspan id="tspan4352" font-family="&apos;Al Nile&apos;" font-size="46.455px" stroke="#0092a5" y="684.92743" x="1424.4934" stroke-width="1.1321px">Galería con </tspan></tspan><tspan id="tspan4354" y="783.9834" x="1424.4934"><tspan id="tspan4356" font-family="&apos;Al Nile&apos;" font-size="46.455px" stroke="#0092a5" y="783.9834" x="1424.4934" stroke-width="1.1321px">mis cuadros</tspan></tspan></text>
+    <text id="text4348" style="word-spacing:0px;letter-spacing:0px" line-height="115.99999666%" font-family="&apos;Al Nile&apos;" xml:space="preserve" font-size="50.087px" transform="scale(1.1731 .85247)" y="840.56946" x="1194.6154" stroke-width=".98381px" fill="#000000"><tspan id="tspan4350" line-height="115.99999666%" y="840.56946" x="1194.6154"><tspan id="tspan4352" font-size="50.087px" font-family="&apos;Al Nile&apos;" line-height="115.99999666%" stroke="#0092a5" y="840.56946" x="1194.6154" stroke-width=".98381px">Galería con </tspan></tspan><tspan id="tspan4354" line-height="115.99999666%" y="926.65192" x="1194.6154"><tspan id="tspan4356" font-size="50.087px" font-family="&apos;Al Nile&apos;" line-height="115.99999666%" stroke="#0092a5" y="926.65192" x="1194.6154" stroke-width=".98381px">mis cuadros</tspan></tspan></text>
   </g>
 </svg>
