--- a/_includes/yearly_archive.html
+++ b/_includes/yearly_archive.html
@@ -10,6 +10,6 @@
             <h5>{{ post.date | date: '%Y' }}</h5>
         {% endif %}
     {% endunless %}
-    <li><span class="date">{{ post.date | date:"%d. %b" }}</span> <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}">{{ post.title }}</a></li>
+    <li><span class="date">{{ post.date | date:"%d." }} {% include only_month_es.html inputDate=post.date %}</span> <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/'}}">{{ post.title }}</a></li>
   {% endfor %}
 </ul>
