--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,7 @@
 <footer>
     <div class="content">
-        <span>&copy; Pedro Luis</span>
+        <span>&copy; Pedro Luis Fernández Peinado.</span>
+	<span>Realizado con &#10084; por <a href="http://es.linkedin.com/in/cristinafsanz" target="_blank">Cristina Fernández Sanz</a></span>
         <span class="backtotop">Volver arriba</span>
     </div>
 </footer>
