--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -7,8 +7,8 @@
                 <li>
                     <a class="homelink" href="{{ site.baseurl | replace: '//', '/' }}/">Inicio</a>
                 </li>
-                <li>
-                    <a href="{{ site.baseurl | replace: '//', '/' }}/archive">Archivo</a>
+		<li>
+                    <a href="{{ site.baseurl | replace: '//', '/' }}/about">Sobre el proyecto</a>
                 </li>
             </ul>
         </nav>
