--- a/_layouts/post-full.html
+++ b/_layouts/post-full.html
@@ -39,20 +39,14 @@
                         <h1 class="post-title">
                             {{ page.title }}
                         </h1>
-                        <div class="meta">
-                            {% include author.html%} &bull;
-                            <span class="date">
-                                Publicado el {% include month_es.html inputDate=page.date %}
-                            </span>
+			<div class="post-content">
+                            {{ content }}
                         </div>
                         {% if page.type == "standard" %}
                             {% if page.featimg %}
 				<img class="featimg" src="{{ site.media_folder | prepend: site.baseurl | replace: '//', '/'}}/{{ page.featimg | replace: 'jpg', 'JPG'}}" alt="{{ page.featimg | replace: 'jpg', '' }}">
                             {% endif %}
                         {% endif %}
-                        <div class="post-content">
-                            {{ content }}
-                        </div>
                         {% if page.category or page.tags %}
                         <div class="catsandtags">
                             {% if page.category %}
@@ -64,23 +58,15 @@
                             {% if page.category and page.tags %}
                                 &bull;
                             {% endif %}
-                            {% if page.tags %}
-                            <span class="tags">
-                                <span class="name">tags:</span>
-                                {% for tag in page.tags %}
-                                    <a href="{{ site.tag_dir | prepend: site.baseurl | replace: '//', '/' }}/{{ tag }}">{{ tag }}</a>
-                                {% endfor %}
-                            </span>
-                            {% endif %}
                         </div>
                         {% endif %}
                     </article>
                     <div class="post-nav">
-                        {% if page.previous.url %}
-                        <a class="btn prev" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}"><i class="fa fa-angle-left"></i><span class="short"> prev</span><span class="long">io</span></a>
+			{% if page.next.url %}
+                        <a class="btn prev" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}"><i class="fa fa-angle-left"></i><span class="short"> prev</span><span class="long">io </span></a>
                         {% endif %}
-                        {% if page.next.url %}
-                        <a class="btn next" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}"><span class="short">sig</span><span class="long">uiente </span><i class="fa fa-angle-right"></i></a>
+                        {% if page.previous.url %}
+                        <a class="btn next" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}"><span class="short"> sig</span><span class="long">uiente </span><i class="fa fa-angle-right"></i></a>
                         {% endif %}
                     </div>
                 </div>
